2014-06-23  Dmitry Antipov  <dmantipov@yandex.ru>

	Simplify and cleanup character conversion stuff.
	* lisp.h (multibyte_char_to_unibyte, multibyte_char_to_unibyte_safe):
	Remove prototypes.
	* character.c (multibyte_char_to_unibyte)
	(multibyte_char_to_unibyte_safe): Remove; no longer used.
	* character.h (make_char): Remove; unused.
	(CHAR_TO_BYTE8, CHAR_TO_BYTE_SAFE): Simplify.
	(ASCII_BYTE_P): Remove; ASCII_CHAR_P does the same thing.
	* buffer.c, charset.c, charset.h, cmds.c, coding.c, editfns.c:
	* fileio.c, indent.c, insdel.c, keyboard.c, lread.c, print.c:
	* search.c, term.c, xdisp.c, xterm.c: Related users changed.

2014-06-22  Mario Lang  <mlang@delysid.org>

	* w32fns.c (Fw32_shell_execute): The the -> the.

2014-06-22  Dmitry Antipov  <dmantipov@yandex.ru>

	* xmenu.c (mouse_position_for_popup):
	* xselect.c (mouse_position_for_drop): Do not duplicate ...
	* xfns.c (x_relative_mouse_position): ... and prefer this function.
	* menu.c (Fx_popup_menu):
	* xselect.c (x_handle_dnd_message): Adjust users.
	* menu.h (mouse_position_for_popup): Remove prototype.
	* xterm.h (x_relative_mouse_position): Add prototype.
	* xterm.c (x_find_topmost_parent): Break from the loop and do not
	call XFree if XQueryTree returns zero.

2014-06-21  Eli Zaretskii  <eliz@gnu.org>

	* indent.c (Fvertical_motion): Doc fix.
	Move to the goal column, if any, with a single call to
	move_it_in_display_line, not in two calls.  Doing this with two
	calls causes move_it_in_display_line apply the line-prefix
	handling twice instead of just once.  (Bug#17823)

2014-06-21  Paul Eggert  <eggert@cs.ucla.edu>

	Port to OS X ACLs (Bug#17810).
	* fileio.c (Ffile_acl): Port to OS X, where acl_get_file (...,
	ACL_TYPE_ACCESS) doesn't work.

2014-06-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keyboard.c (read_key_sequence): Don't invoke Vprefix_help_command
	before checking key-translation-map (bug#17659).

2014-06-21  Dmitry Antipov  <dmantipov@yandex.ru>
